--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -96,6 +96,48 @@ int main()
         float porcentaje(int num1, int num2):
             pce[5]=(num1*100)/num2;
             return pce;
+--------------------------------------------------
+
+//ventas por marca y fp
+    float acuEF[]={};
+    float acuMP[]={};
+    float acuTR[]={};
+    float acuTC[]={};
+    float acuCT[]={};
+    int i;
+    while (nroCompra=!0):{
+        for(i=0;i<10,i++):{
+            if codProd==codProd[i];
+                codProd[i];
+                codMarca[i];
+                indice=i;
+                switch():
+                    cout<<"Seleccione un medio de pago";
+                    cout<<"1.Efectivo, 2.Mercado Pago, 3.transferencia, 4.tarjeta de credito, 5.criptomonedas";
+                case 1:
+                    //efectivo
+                    acuEF[INDICE]+=Cant;
+                case 2:
+                    //Mercado pago
+                    acuMP[INDICE]+=Cant;
+                case 3:
+                    //transferencia
+                    acuTR[INDICE]+=Cant;
+                case 1:
+                    //Tarjeta credito
+                    acuTC[INDICE]+=Cant;
+                case 1:
+                    //Criptomonedas
+                    acuCT[INDICE]+=Cant;
+            for(i=0;i<10,i++):{
+                cout<<"Total de ventas efectivo:",acuEF[i],"Codigo de marca",codMarca[i];
+                cout<<"Total de ventas Mercado Pago:",acuMP[i],"Codigo de marca",codMarca[i];
+                cout<<"Total de ventas transferencia:",acuTR[i],"Codigo de marca",codMarca[i];
+                cout<<"Total de ventas tarjeta de crèdito:",acuTC[i],"Codigo de marca",codMarca[i];
+                cout<<"Total de ventas criptomoneda:",acuCT[i],"Codigo de marca",codMarca[i];
+            }
+        }
+    }
 
 
     return 0;
